# hk-stock

./: .env.example  .gitignore  LICENSE  README.md  ai_analyzer.py  analyzer.py  auto_trader.py  backtest.py  config.py  daily_report.py  dashboard.py  database.py  fundamentals.py  hkstock_cron.py  indicators.py  ipo_tracker.py  manage.sh  market_data.py  position_manager.py  pyproject.toml  real_data.py  sector_analyzer.py  stock_screener.py
.github/workflows/: ci.yml
src/hkstock/: __init__.py
src/hkstock/analysis/: __init__.py  ai_analyzer.py  fundamentals.py  indicators.py  scoring.py  sector.py
src/hkstock/app/: __init__.py  cron.py  daily_report.py  dashboard.py
src/hkstock/core/: __init__.py  config.py  io.py  logging.py  types.py
src/hkstock/data/: __init__.py  database.py  market_data.py  real_data.py
src/hkstock/strategy/: __init__.py  analyzer.py  backtest.py  ipo_tracker.py  screener.py
src/hkstock/trading/: __init__.py  auto_trader.py  position_manager.py
templates/: index.html
tests/: conftest.py
tests/integration/: test_imports.py
tests/unit/: test_config.py  test_cron.py  test_database.py  test_indicators.py  test_io.py  test_position_manager.py  test_real_data.py  test_scoring.py  test_sector.py
