[project]
name = "hk-stock"
version = "0.1.0"
description = "港股量化分析与模拟交易系统"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3",
    "pandas>=2.0,<4",
    "numpy>=1.24,<3",
    "flask>=3.0,<4",
    "python-dotenv>=1.0,<2",
    "codebuddy-agent-sdk>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
