[project]
name = "hk-stock"
version = "0.1.0"
description = "港股量化分析与模拟交易系统"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
keywords = ["hong-kong", "stock", "quantitative", "trading", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.31,<3",
    "pandas>=2.0,<4",
    "numpy>=1.24,<3",
    "flask>=3.0,<4",
    "python-dotenv>=1.0,<2",
    "codebuddy-agent-sdk>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
